Fix tray icon spacing

--- a/unite@hardpixel.eu/stylesheet.css
+++ b/unite@hardpixel.eu/stylesheet.css
@@ -79,7 +79,7 @@
   background-image: url("/usr/share/themes/Ambiance/unity/unmaximize_focused_pressed.svg");
 }
 
-#panel .tray-buttons-box {
+#panel .tray-icons-box {
   spacing: 10px;
   margin-top: 2px;
   margin-bottom: 2px;
